trunk/Archive2/81/6dea1a0ed3e9ee/output
main.cpp: In function 'int main()':
main.cpp:26:26: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type 'int'
     auto &t2 = test2(list);        
                          ^
main.cpp:25:11: warning: unused variable 't1' [-Wunused-variable]
     auto &t1 = test1(list);
           ^
main.cpp:26:11: warning: unused variable 't2' [-Wunused-variable]
     auto &t2 = test2(list);        
           ^
